--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -13,3 +13,15 @@
  *= require_tree .
  *= require_self
  */
+
+.btn {
+  text-decoration: none;
+  background-color: blue;
+  color:  white;
+  padding: 10px;
+  border-radius: 3px;
+}
+
+.btn:hover {
+  background-color:  darkblue;
+}
